@@ -1,3 +1,7 @@
+==
+  * Bug Fixes
+    * Fix the glob and directory config loading for -c option
+
 == 0.7.16 / 2009-08-24
   * Minor Enhancements
     * Better logging for disk_usage condition [github.com/lettherebecode]
